[package]
name = "netproc-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
dns-lookup = "3"
comfy-table = "7"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hostname = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Linux-only dependency (reads /proc + /proc/net/tcp*)
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
netstat2 = "0.11"
sysinfo = "0.37"